Adopting TFS commits from 2661361 to 5232c61 (gpt-6-astra)